<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    tools:context="tecsup.integrador.gamarraapp.activity.RegisterTiendaActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/back"
    android:gravity="center"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@color/back"
        android:orientation="horizontal"
        android:padding="10dp">

        <ImageButton
            android:id="@+id/btnBack"
            style="@style/Widget.AppCompat.ImageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:backgroundTint="@android:color/transparent"
            fab:srcCompat="@drawable/ic_arrow_back_green" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tienda_registrar"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="20dp"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@+id/btnBack" />

    </RelativeLayout>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/foto_image"
                android:layout_width="160dp"
                android:layout_height="160dp"
                android:adjustViewBounds="true"
                android:scaleType="centerCrop"
                android:layout_gravity="center"
                android:layout_margin="32dp"
                android:src="@drawable/img_store2" />

            <EditText
                android:id="@+id/txtNombre"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@color/ground2"
                android:hint="@string/tienda_nombre"
                android:inputType="text"
                android:padding="10dp"
                android:textColor="@color/green"
                android:textColorHint="@color/input_login_hint" />

            <EditText
                android:id="@+id/txtPhone"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@color/ground2"
                android:hint="@string/tienda_telefono"
                android:inputType="phone"
                android:maxLength="9"
                android:padding="10dp"
                android:textColor="@color/green"
                android:textColorHint="@color/input_login_hint" />

            <EditText
                android:id="@+id/txtPuesto"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@color/ground2"
                android:hint="@string/tienda_puesto"
                android:inputType="text"
                android:padding="10dp"
                android:textColor="@color/green"
                android:textColorHint="@color/input_login_hint" />

            <!-- Next Steep Button -->

            <Button
                android:id="@+id/btnNext"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/borde_redondo_fondo"
                android:text="@string/btn_siguiente"
                android:textColor="@color/white" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>