<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/bgdesenfocado"
    android:gravity="center"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/colorPrimary"
        android:padding="5dp">

        <ImageButton
            android:id="@+id/btnBack"
            style="@style/Widget.AppCompat.ImageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:backgroundTint="@android:color/transparent"
            fab:srcCompat="@drawable/ic_arrow_back"/>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@+id/btnBack"
            android:text="@string/comerciante_title_reg"
            android:textColor="@color/white"
            android:textSize="20dp" />

    </RelativeLayout>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="16dp"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/backbtn"
                    style="@style/Widget.AppCompat.ImageButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/colorAccent"
                    app:srcCompat="@drawable/ic_camera"
                    android:onClick="takePicture"
                    android:layout_alignParentTop="true"
                    android:layout_toEndOf="@+id/imgPerfil" />

                <ImageButton
                    style="@style/Widget.AppCompat.ImageButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/colorAccent"
                    app:srcCompat="@drawable/ic_insert_photo"
                    android:onClick="galleryPicture"
                    android:layout_alignParentTop="true"
                    android:layout_toStartOf="@+id/imgPerfil" />

                <!-- Imagen de perfil -->
                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/imgPerfil"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/img_hombre"
                    app:civ_border_color="@color/colorAccent"
                    app:civ_border_width="1dp"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true" />


            </RelativeLayout>

            <EditText
                android:id="@+id/etxName"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@drawable/borde_redondo"
                android:hint="@string/hint_name"
                android:inputType="textCapWords"
                android:padding="10dp"
                android:singleLine="true"
                android:textColor="@color/colorPrimaryDark"
                android:textColorHint="@color/colorPrimary" />

            <EditText
                android:id="@+id/etxDni"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@drawable/borde_redondo"
                android:hint="@string/hint_dni"
                android:inputType="number"
                android:maxLength="8"
                android:padding="10dp"
                android:singleLine="true"
                android:textColor="@color/colorPrimaryDark"
                android:textColorHint="@color/colorPrimary" />

            <EditText
                android:id="@+id/etxEmail"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@drawable/borde_redondo"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress"
                android:padding="10dp"
                android:singleLine="true"
                android:textColor="@color/colorPrimaryDark"
                android:textColorHint="@color/colorPrimary" />

            <EditText
                android:id="@+id/etxPassword"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@drawable/borde_redondo"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:padding="10dp"
                android:singleLine="true"
                android:textColor="@color/colorPrimaryDark"
                android:textColorHint="@color/colorPrimary" />

            <EditText
                android:id="@+id/etxPassword2"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@drawable/borde_redondo"
                android:hint="@string/hint_password_confirm"
                android:inputType="textPassword"
                android:padding="10dp"
                android:singleLine="true"
                android:textColor="@color/colorPrimaryDark"
                android:textColorHint="@color/colorPrimary" />

            <!-- Login Button -->

            <Button
                android:id="@+id/btnRegister"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dip"
                android:background="@drawable/borde_redondo_fondo"
                android:text="@string/btn_register"
                android:textColor="@color/back" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>