<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/back"
    android:orientation="vertical"
    android:gravity="center"
    tools:context="tecsup.integrador.gamarraapp.activity.RegisterProductoActivity">

    <RelativeLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@color/back"
        android:orientation="horizontal"
        android:padding="5dp">

        <ImageButton
            android:id="@+id/btnBack"
            style="@style/Widget.AppCompat.ImageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:backgroundTint="@android:color/transparent"
            fab:srcCompat="@drawable/ic_arrow_back_green" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/oferta_crear"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="20dp"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@+id/btnBack" />

    </RelativeLayout>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/back"
            android:orientation="vertical"
            android:paddingBottom="20dp">

            <ImageView
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_gravity="center"
                android:layout_margin="16dp"
                android:src="@drawable/img_oferta" />

            <fr.ganfra.materialspinner.MaterialSpinner
                android:id="@+id/spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:ms_arrowColor="@color/colorPrimaryDark"
                app:ms_arrowSize="16dp"
                app:ms_baseColor="@color/colorPrimaryDark"
                app:ms_enableFloatingLabel="true"
                app:ms_errorColor="@color/colorAccent"
                app:ms_floatingLabelColor="@color/colorPrimaryDark"
                app:ms_floatingLabelText="Categoría del producto"
                app:ms_highlightColor="@color/colorPrimaryDark"
                app:ms_hint="Escoja una categoría"
                app:ms_hintColor="@color/colorAccent"
                app:ms_multiline="true" />

            <EditText
                android:id="@+id/nombre_input"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:background="@color/ground2"
                android:hint="@string/oferta_nombre"
                android:inputType="text"
                android:maxLines="1"
                android:padding="10dp"
                android:textColor="@color/colorPrimaryDark"
                android:textColorHint="@color/colorPrimary" />


            <EditText
                android:id="@+id/precio_input"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:background="@color/ground2"
                android:hint="@string/oferta_precio"
                android:inputType="numberDecimal"
                android:maxLines="1"
                android:padding="10dp"
                android:textColor="@color/colorPrimaryDark"
                android:textColorHint="@color/colorPrimary" />

            <EditText
                android:id="@+id/detalles_input"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:background="@color/ground2"
                android:hint="@string/oferta_desc"
                android:inputType="textMultiLine"
                android:lines="3"
                android:maxLength="500"
                android:padding="10dp"
                android:textColor="@color/colorPrimaryDark"
                android:textColorHint="@color/colorPrimary" />


            <!-- Next Steep Button -->

            <Button
                android:id="@+id/btnNext"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/borde_redondo_fondo"
                android:onClick="callRegister"
                android:text="@string/btn_siguiente"
                android:textColor="@color/white" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>
